--- a/lib/l10n/intl_ja.arb
+++ b/lib/l10n/intl_ja.arb
@@ -20,7 +20,7 @@
   "@AppHome": {},
   "AppName": "Conning Tower",
   "@AppName": {},
-  "AppNotify": "提督、conning towerへようこそ。conning towerは艦これの画面を自動的に全画面にします。もし画面が長時間DMM GAMESのトップバーから切り替わらなかった際は、「ツール-Web-HTTPリダイレクト」を押してください。",
+  "AppNotify": "提督、Conning Towerへようこそ。Conning Towerは艦これの画面を自動的に全画面にします。もし画面が長時間DMM GAMESのトップバーから切り替わらなかった際は、「ツール-Web-HTTPリダイレクト」を押してください。",
   "@AppNotify": {},
   "AppRedirect": "HTTPリダイレクト",
   "@AppRedirect": {},
@@ -40,7 +40,7 @@
   "@Cancel": {},
   "AboutButton": "本アプリ\nについて",
   "@AboutButton": {},
-  "AboutDescription": "Conning towerやBridgeはクロスプラットフォームプレイに対応した艦隊これくしょんの専用ブラウザです。",
+  "AboutDescription": "Conning TowerやBridgeはクロスプラットフォームプレイに対応した艦隊これくしょんの専用ブラウザです。",
   "@AboutDescription": {},
   "ToolsButton": "ツール",
   "@ToolsButton": {},
