--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -4,8 +4,12 @@
   "@ToolTitleWeb": {},
   "ToolTitleGameSound": "Game Sound",
   "@ToolTitleGameSound": {},
-  "ToolTitleGameScreen": "Game Screen",
+  "ToolTitleGameScreen": "WebView Screen",
   "@ToolTitleGameScreen": {},
+  "ToolUASetting": "Edit UserAgent",
+  "@ToolUASetting": {},
+  "ToolUATip": "Need Relaunch App to Active",
+  "@ToolUATip": {},
   "AppBack": "Back",
   "@AppBack": {},
   "AppForward": "Forward",
@@ -22,7 +26,7 @@
   "@AppRefresh": {},
   "AppResize": "Resize to Fit Screen",
   "@AppResize": {},
-  "AppClearCookie": "Logout",
+  "AppClearCookie": "Clear Cookie",
   "@AppClearCookie": {},
   "AppClearCache": "Clear Cache",
   "@AppClearCache": {},
@@ -36,6 +40,10 @@
   "@AboutButton": {},
   "AboutDescription": "Conning tower or Bridge is a cross-platform KanColle(艦隊これくしょん-艦これ-) browser.",
   "@AboutDescription": {},
+  "AboutContributors": "Contributors",
+  "@AboutContributors": {},
+  "AboutVersion": "Version",
+  "@AboutVersion": {},
   "ToolsButton": "Tools",
   "@ToolsButton": {},
   "GameMute": "Off",
