--- a/lib/l10n/intl_ja.arb
+++ b/lib/l10n/intl_ja.arb
@@ -2,8 +2,12 @@
   "@@locale": "ja",
   "ToolTitleGameSound": "ゲームの音声",
   "@ToolTitleGameSound": {},
-  "ToolTitleGameScreen": "ゲームの画面",
+  "ToolTitleGameScreen": "画面",
   "@ToolTitleGameScreen": {},
+  "ToolUASetting": "UAを編集する",
+  "@ToolUASetting": {},
+  "ToolUATip": "アプリを再開するは必要です",
+  "@ToolUATip": {},
   "MsgMuteGame": "リフレッシュするとゲームの音声が消えます。",
   "@MsgMuteGame": {},
   "MsgUnmuteGame": "リフレッシュするとゲームの音声が元に復します。",
@@ -30,7 +34,7 @@
   "@AppResize": {},
   "AppBottomSafe": "ボトムアップ",
   "@AppBottomSafe": {},
-  "AppClearCookie": "ログアウト",
+  "AppClearCookie": "Cookieを消去",
   "@AppClearCookie": {},
   "AppClearCache": "キャッシュを消去",
   "@AppClearCache": {},
@@ -42,6 +46,10 @@
   "@AboutButton": {},
   "AboutDescription": "Conning TowerやBridgeはクロスプラットフォームプレイに対応した艦隊これくしょんの専用ブラウザです。",
   "@AboutDescription": {},
+  "AboutContributors": "貢献者",
+  "@AboutContributors": {},
+  "AboutVersion": "バージョン",
+  "@AboutVersion": {},
   "ToolsButton": "ツール",
   "@ToolsButton": {},
   "SettingsLockDeviceOrientation": "画面の方向を固定する",
