--- a/lib/l10n/intl_zh_Hans.arb
+++ b/lib/l10n/intl_zh_Hans.arb
@@ -2,8 +2,12 @@
   "@@locale": "zh-Hans",
   "ToolTitleGameSound": "游戏声音",
   "@ToolTitleGameSound": {},
-  "ToolTitleGameScreen": "游戏画面",
+  "ToolTitleGameScreen": "网页窗口",
   "@ToolTitleGameScreen": {},
+  "ToolUASetting": "修改UA",
+  "@ToolUASetting": {},
+  "ToolUATip": "设置后需重启应用",
+  "@ToolUATip": {},
   "MsgMuteGame": "刷新后游戏将静音",
   "@MsgMuteGame": {},
   "MsgUnmuteGame": "刷新后游戏声音将打开",
@@ -28,7 +32,7 @@
   "@AppRefresh": {},
   "AppResize": "调整尺寸至适合屏幕",
   "@AppResize": {},
-  "AppClearCookie": "退出登录",
+  "AppClearCookie": "清除Cookie",
   "@AppClearCookie": {},
   "AppClearCache": "清除缓存",
   "@AppClearCache": {},
@@ -42,6 +46,10 @@
   "@AboutButton": {},
   "AboutDescription": "舰桥是一款跨平台舰队Collection「艦隊これくしょん-艦これ-」专用浏览器。",
   "@AboutDescription": {},
+  "AboutContributors": "贡献者",
+  "@AboutContributors": {},
+  "AboutVersion": "版本",
+  "@AboutVersion": {},
   "ToolsButton": "工具",
   "@ToolsButton": {},
   "SettingsButton": "设置",
