--- a/lib/l10n/intl_zh_Hant.arb
+++ b/lib/l10n/intl_zh_Hant.arb
@@ -30,8 +30,16 @@
   "@AboutButton": {},
   "AboutDescription": "艦橋是一款跨平台艦隊Collection「艦隊これくしょん-艦これ-」專用瀏覽器。",
   "@AboutDescription": {},
+  "AboutContributors": "貢獻者",
+  "@AboutContributors": {},
+  "AboutVersion": "版本",
+  "@AboutVersion": {},
   "ToolsButton": "工具",
   "@ToolsButton": {},
+  "ToolUASetting": "修改UA",
+  "@ToolUASetting": {},
+  "ToolUATip": "設置後需重啟應用",
+  "@ToolUATip": {},
   "GameMute": "遊戲靜音",
   "@GameMute": {},
   "GameUnmute": "遊戲解除靜音",
