fix: l10n for AppStore channel

--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -38,7 +38,7 @@
   "@Cancel": {},
   "AboutButton": "About",
   "@AboutButton": {},
-  "AboutDescription": "Conning tower or Bridge is a cross-platform KanColle(艦隊これくしょん-艦これ-) browser.",
+  "AboutDescription": "ConningTower for iOS is a browser for browser games that allows you to customize your screen and always stay in landscape in desktop view.",
   "@AboutDescription": {},
   "AboutContributors": "Contributors",
   "@AboutContributors": {},
