--- a/lib/l10n/intl_ja.arb
+++ b/lib/l10n/intl_ja.arb
@@ -44,7 +44,7 @@
   "@Cancel": {},
   "AboutButton": "本アプリ\nについて",
   "@AboutButton": {},
-  "AboutDescription": "Conning TowerやBridgeはクロスプラットフォームプレイに対応した艦隊これくしょんの専用ブラウザです。",
+  "AboutDescription": "ConningTower for iOSは、画面のカスタマイズが可能で、デスクトップ表示では常に横画面に維持されるブラウザゲーム用ブラウザです。",
   "@AboutDescription": {},
   "AboutContributors": "貢献者",
   "@AboutContributors": {},
