--- a/lib/l10n/intl_zh_Hans.arb
+++ b/lib/l10n/intl_zh_Hans.arb
@@ -44,7 +44,7 @@
   "@Cancel": {},
   "AboutButton": "关于",
   "@AboutButton": {},
-  "AboutDescription": "舰桥是一款跨平台舰队Collection「艦隊これくしょん-艦これ-」专用浏览器。",
+  "AboutDescription": "舰桥是一款可定制屏幕并保持电脑模式横向画面使用的网页游戏专用浏览器。",
   "@AboutDescription": {},
   "AboutContributors": "贡献者",
   "@AboutContributors": {},
