--- a/lib/l10n/intl_zh_Hant.arb
+++ b/lib/l10n/intl_zh_Hant.arb
@@ -28,7 +28,7 @@
   "@Cancel": {},
   "AboutButton": "關於",
   "@AboutButton": {},
-  "AboutDescription": "艦橋是一款跨平台艦隊Collection「艦隊これくしょん-艦これ-」專用瀏覽器。",
+  "AboutDescription": "艦橋是一款可定制屏幕並保持電腦模式橫向畫面使用的網頁遊戲專用瀏覽器。",
   "@AboutDescription": {},
   "AboutContributors": "貢獻者",
   "@AboutContributors": {},
