feat: action sheet

--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -10,6 +10,12 @@
   "@ToolUASetting": {},
   "ToolUATip": "Need Relaunch App to Active",
   "@ToolUATip": {},
+  "ToolHomeSetting": "Set Home URL",
+  "@ToolHomeSetting": {},
+  "ToolLandscape": "Landscape",
+  "@ToolLandscape": {},
+  "ToolPortrait": "Portrait",
+  "@ToolPortrait": {},
   "AppBack": "Back",
   "@AppBack": {},
   "AppForward": "Forward",
