--- a/lib/l10n/intl_zh_Hans.arb
+++ b/lib/l10n/intl_zh_Hans.arb
@@ -8,6 +8,12 @@
   "@ToolUASetting": {},
   "ToolUATip": "设置后需重启应用",
   "@ToolUATip": {},
+  "ToolHomeSetting": "设置主页URL",
+  "@ToolHomeSetting": {},
+  "ToolLandscape": "横向屏幕",
+  "@ToolLandscape": {},
+  "ToolPortrait": "纵向屏幕",
+  "@ToolPortrait": {},
   "MsgMuteGame": "刷新后游戏将静音",
   "@MsgMuteGame": {},
   "MsgUnmuteGame": "刷新后游戏声音将打开",
