--- a/lib/l10n/intl_zh_Hant.arb
+++ b/lib/l10n/intl_zh_Hant.arb
@@ -40,6 +40,12 @@
   "@ToolUASetting": {},
   "ToolUATip": "設置後需重啟應用",
   "@ToolUATip": {},
+  "ToolHomeSetting": "設置主頁URL",
+  "@ToolHomeSetting": {},
+  "ToolLandscape": "橫式螢幕",
+  "@ToolLandscape": {},
+  "ToolPortrait": "直式螢幕",
+  "@ToolPortrait": {},
   "GameMute": "遊戲靜音",
   "@GameMute": {},
   "GameUnmute": "遊戲解除靜音",
