--- a/lib/l10n/intl_ja.arb
+++ b/lib/l10n/intl_ja.arb
@@ -8,6 +8,12 @@
   "@ToolUASetting": {},
   "ToolUATip": "アプリを再開するは必要です",
   "@ToolUATip": {},
+  "ToolHomeSetting": "ホームURLを設定する",
+  "@ToolHomeSetting": {},
+  "ToolLandscape": "横画面",
+  "@ToolLandscape": {},
+  "ToolPortrait": "縦画面",
+  "@ToolPortrait": {},
   "MsgMuteGame": "リフレッシュするとゲームの音声が消えます。",
   "@MsgMuteGame": {},
   "MsgUnmuteGame": "リフレッシュするとゲームの音声が元に復します。",
