--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -4,15 +4,25 @@
   "@ToolTitleWeb": {},
   "ToolTitleGameSound": "Game Sound",
   "@ToolTitleGameSound": {},
-  "ToolTitleGameScreen": "Game Screen",
+  "ToolTitleGameScreen": "WebView Screen",
   "@ToolTitleGameScreen": {},
+  "ToolUASetting": "Edit UserAgent",
+  "@ToolUASetting": {},
+  "ToolUATip": "Need Relaunch App to Active",
+  "@ToolUATip": {},
+  "ToolHomeSetting": "Set Home URL",
+  "@ToolHomeSetting": {},
+  "ToolLandscape": "Landscape",
+  "@ToolLandscape": {},
+  "ToolPortrait": "Portrait",
+  "@ToolPortrait": {},
   "AppBack": "Back",
   "@AppBack": {},
   "AppForward": "Forward",
   "@AppForward": {},
   "AppHome": "Home",
   "@AppHome": {},
-  "AppName": "Bridge",
+  "AppName": "Conning Tower",
   "@AppName": {},
   "AppNotify": "Admiral, welcome to the bridge, the bridge will make the Kancolle interface automatically full screen, if you see the top bar of DMM GAMES for a long time, please click the 'Tools-Web-HTTP Redirect' button before you command.",
   "@AppNotify": {},
@@ -20,9 +30,9 @@
   "@AppRedirect": {},
   "AppRefresh": "Refresh",
   "@AppRefresh": {},
-  "AppResize": "Resize to fit screen",
+  "AppResize": "Resize to Fit Screen",
   "@AppResize": {},
-  "AppClearCookie": "Logout",
+  "AppClearCookie": "Clear Cookie",
   "@AppClearCookie": {},
   "AppClearCache": "Clear Cache",
   "@AppClearCache": {},
@@ -34,26 +44,32 @@
   "@Cancel": {},
   "AboutButton": "About",
   "@AboutButton": {},
-  "AboutDescription": "Conning tower or Bridge is a cross-platform KanColle(艦隊これくしょん-艦これ-) browser.",
+  "AboutDescription": "ConningTower for iOS is a browser for browser games that allows you to customize your screen and always stay in landscape in desktop view.",
   "@AboutDescription": {},
+  "AboutContributors": "Contributors",
+  "@AboutContributors": {},
+  "AboutVersion": "Version",
+  "@AboutVersion": {},
   "ToolsButton": "Tools",
   "@ToolsButton": {},
   "GameMute": "Off",
   "@GameMute": {},
   "GameUnmute": "On",
   "@GameUnmute": {},
-  "SettingsLockDeviceOrientation": "Lock screen orientation",
+  "SettingsLockDeviceOrientation": "Lock Screen Orientation",
   "@SettingsLockDeviceOrientation": {},
   "SettingsButton": "Settings",
   "@SettingsButton": {},
-  "SettingsReset": "Reset app",
+  "SettingsReset": "Reset App",
   "@SettingsReset": {},
-  "SettingsHomeLoad": "Make app auto open KanColle",
+  "SettingsHomeLoad": "Auto Open KanColle on Launch",
   "@SettingsHomeLoad": {},
-  "SettingsHomeSave": "Make current web page as home",
+  "SettingsHomeSave": "Make Current Web Page as Home",
   "@SettingsHomeSave": {},
-  "SettingsEnableAutoProcess": "Enable auto fullscreen",
+  "SettingsEnableAutoProcess": "Enable Auto Fullscreen",
   "@SettingsEnableAutoProcess": {},
+  "SettingsHideFAB": "Hide Floating Action Button",
+  "@SettingsHideFAB": {},
   "AppLeftSideControlsLoad": "Load URL: {url}",
   "@AppLeftSideControlsLoad": {},
   "AppLeftSideControlsNotReady": "WebView not ready",
