--- a/lib/l10n/intl_ja.arb
+++ b/lib/l10n/intl_ja.arb
@@ -2,8 +2,18 @@
   "@@locale": "ja",
   "ToolTitleGameSound": "ゲームの音声",
   "@ToolTitleGameSound": {},
-  "ToolTitleGameScreen": "ゲームの画面",
+  "ToolTitleGameScreen": "画面",
   "@ToolTitleGameScreen": {},
+  "ToolUASetting": "UAを編集する",
+  "@ToolUASetting": {},
+  "ToolUATip": "アプリを再開するは必要です",
+  "@ToolUATip": {},
+  "ToolHomeSetting": "ホームURLを設定する",
+  "@ToolHomeSetting": {},
+  "ToolLandscape": "横画面",
+  "@ToolLandscape": {},
+  "ToolPortrait": "縦画面",
+  "@ToolPortrait": {},
   "MsgMuteGame": "リフレッシュするとゲームの音声が消えます。",
   "@MsgMuteGame": {},
   "MsgUnmuteGame": "リフレッシュするとゲームの音声が元に復します。",
@@ -20,7 +30,7 @@
   "@AppHome": {},
   "AppName": "Conning Tower",
   "@AppName": {},
-  "AppNotify": "提督、conning towerへようこそ。conning towerは艦これの画面を自動的に全画面にします。もし画面が長時間DMM GAMESのトップバーから切り替わらなかった際は、「ツール-Web-HTTPリダイレクト」を押してください。",
+  "AppNotify": "提督、Conning Towerへようこそ。Conning Towerは艦これの画面を自動的に全画面にします。もし画面が長時間DMM GAMESのトップバーから切り替わらなかった際は、「ツール-Web-HTTPリダイレクト」を押してください。",
   "@AppNotify": {},
   "AppRedirect": "HTTPリダイレクト",
   "@AppRedirect": {},
@@ -30,7 +40,7 @@
   "@AppResize": {},
   "AppBottomSafe": "ボトムアップ",
   "@AppBottomSafe": {},
-  "AppClearCookie": "ログアウト",
+  "AppClearCookie": "Cookieを消去",
   "@AppClearCookie": {},
   "AppClearCache": "キャッシュを消去",
   "@AppClearCache": {},
@@ -40,8 +50,12 @@
   "@Cancel": {},
   "AboutButton": "本アプリ\nについて",
   "@AboutButton": {},
-  "AboutDescription": "Conning towerやBridgeはクロスプラットフォームプレイに対応した艦隊これくしょんの専用ブラウザです。",
+  "AboutDescription": "ConningTower for iOSは、画面のカスタマイズが可能で、デスクトップ表示では常に横画面に維持されるブラウザゲーム用ブラウザです。",
   "@AboutDescription": {},
+  "AboutContributors": "貢献者",
+  "@AboutContributors": {},
+  "AboutVersion": "バージョン",
+  "@AboutVersion": {},
   "ToolsButton": "ツール",
   "@ToolsButton": {},
   "SettingsLockDeviceOrientation": "画面の方向を固定する",
