--- a/lib/l10n/intl_zh_Hans.arb
+++ b/lib/l10n/intl_zh_Hans.arb
@@ -2,8 +2,18 @@
   "@@locale": "zh-Hans",
   "ToolTitleGameSound": "游戏声音",
   "@ToolTitleGameSound": {},
-  "ToolTitleGameScreen": "游戏画面",
+  "ToolTitleGameScreen": "网页窗口",
   "@ToolTitleGameScreen": {},
+  "ToolUASetting": "修改UA",
+  "@ToolUASetting": {},
+  "ToolUATip": "设置后需重启应用",
+  "@ToolUATip": {},
+  "ToolHomeSetting": "设置主页URL",
+  "@ToolHomeSetting": {},
+  "ToolLandscape": "横向屏幕",
+  "@ToolLandscape": {},
+  "ToolPortrait": "纵向屏幕",
+  "@ToolPortrait": {},
   "MsgMuteGame": "刷新后游戏将静音",
   "@MsgMuteGame": {},
   "MsgUnmuteGame": "刷新后游戏声音将打开",
@@ -28,7 +38,7 @@
   "@AppRefresh": {},
   "AppResize": "调整尺寸至适合屏幕",
   "@AppResize": {},
-  "AppClearCookie": "退出登录",
+  "AppClearCookie": "清除Cookie",
   "@AppClearCookie": {},
   "AppClearCache": "清除缓存",
   "@AppClearCache": {},
@@ -40,8 +50,12 @@
   "@Cancel": {},
   "AboutButton": "关于",
   "@AboutButton": {},
-  "AboutDescription": "舰桥是一款跨平台舰队Collection「艦隊これくしょん-艦これ-」专用浏览器。",
+  "AboutDescription": "舰桥是一款可定制屏幕并保持电脑模式横向画面使用的网页游戏专用浏览器。",
   "@AboutDescription": {},
+  "AboutContributors": "贡献者",
+  "@AboutContributors": {},
+  "AboutVersion": "版本",
+  "@AboutVersion": {},
   "ToolsButton": "工具",
   "@ToolsButton": {},
   "SettingsButton": "设置",
