--- a/lib/l10n/intl_zh_Hant.arb
+++ b/lib/l10n/intl_zh_Hant.arb
@@ -28,10 +28,24 @@
   "@Cancel": {},
   "AboutButton": "關於",
   "@AboutButton": {},
-  "AboutDescription": "艦橋是一款跨平台艦隊Collection「艦隊これくしょん-艦これ-」專用瀏覽器。",
+  "AboutDescription": "艦橋是一款可定制屏幕並保持電腦模式橫向畫面使用的網頁遊戲專用瀏覽器。",
   "@AboutDescription": {},
+  "AboutContributors": "貢獻者",
+  "@AboutContributors": {},
+  "AboutVersion": "版本",
+  "@AboutVersion": {},
   "ToolsButton": "工具",
   "@ToolsButton": {},
+  "ToolUASetting": "修改UA",
+  "@ToolUASetting": {},
+  "ToolUATip": "設置後需重啟應用",
+  "@ToolUATip": {},
+  "ToolHomeSetting": "設置主頁URL",
+  "@ToolHomeSetting": {},
+  "ToolLandscape": "橫式螢幕",
+  "@ToolLandscape": {},
+  "ToolPortrait": "直式螢幕",
+  "@ToolPortrait": {},
   "GameMute": "遊戲靜音",
   "@GameMute": {},
   "GameUnmute": "遊戲解除靜音",
